[package]
name = "halo2-for-kzgewe"
version = "0.1.0"
edition = "2021"

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", branch = "main", features = ["dev-graph"] }
halo2_middleware = { git = "https://github.com/privacy-scaling-explorations/halo2.git", branch = "main" }
rand = "0.8"
ark-ec = "0.5.0"
